test/spec/simd/simd_f64x2_rounding.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/proposals/simd/simd_f64x2_rounding.wast
(;; STDOUT ;;;
out/test/spec/simd/simd_f64x2_rounding.wast:367: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.1.wat:1:33: error: unexpected token "i8x16.ceil", expected an instr.
  (memory 1) (func (result v128) (i8x16.ceil (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:368: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.2.wat:1:33: error: unexpected token "i8x16.floor", expected an instr.
  (memory 1) (func (result v128) (i8x16.floor (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:369: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.3.wat:1:33: error: unexpected token "i8x16.trunc", expected an instr.
  (memory 1) (func (result v128) (i8x16.trunc (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:370: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.4.wat:1:33: error: unexpected token "i8x16.nearest", expected an instr.
  (memory 1) (func (result v128) (i8x16.nearest (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:371: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.5.wat:1:33: error: unexpected token "i16x8.ceil", expected an instr.
  (memory 1) (func (result v128) (i16x8.ceil (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:372: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.6.wat:1:33: error: unexpected token "i16x8.floor", expected an instr.
  (memory 1) (func (result v128) (i16x8.floor (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:373: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.7.wat:1:33: error: unexpected token "i16x8.trunc", expected an instr.
  (memory 1) (func (result v128) (i16x8.trunc (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:374: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.8.wat:1:33: error: unexpected token "i16x8.nearest", expected an instr.
  (memory 1) (func (result v128) (i16x8.nearest (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:375: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.9.wat:1:33: error: unexpected token "i32x4.ceil", expected an instr.
  (memory 1) (func (result v128) (i32x4.ceil (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:376: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.10.wat:1:33: error: unexpected token "i32x4.floor", expected an instr.
  (memory 1) (func (result v128) (i32x4.floor (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:377: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.11.wat:1:33: error: unexpected token "i32x4.trunc", expected an instr.
  (memory 1) (func (result v128) (i32x4.trunc (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:378: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.12.wat:1:33: error: unexpected token "i32x4.nearest", expected an instr.
  (memory 1) (func (result v128) (i32x4.nearest (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:379: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.13.wat:1:33: error: unexpected token "i64x2.ceil", expected an instr.
  (memory 1) (func (result v128) (i64x2.ceil (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:380: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.14.wat:1:33: error: unexpected token "i64x2.floor", expected an instr.
  (memory 1) (func (result v128) (i64x2.floor (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:381: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.15.wat:1:33: error: unexpected token "i64x2.trunc", expected an instr.
  (memory 1) (func (result v128) (i64x2.trunc (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:382: assert_malformed passed:
  out/test/spec/simd/simd_f64x2_rounding/simd_f64x2_rounding.16.wat:1:33: error: unexpected token "i64x2.nearest", expected an instr.
  (memory 1) (func (result v128) (i64x2.nearest (v128.const i32x4 0 0 0 0)))
                                  ^^^^^^^^^^^^^
out/test/spec/simd/simd_f64x2_rounding.wast:385: assert_invalid passed:
  error: type mismatch in f64x2.ceil, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:386: assert_invalid passed:
  error: type mismatch in f64x2.floor, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:387: assert_invalid passed:
  error: type mismatch in f64x2.trunc, expected [v128] but got [i32]
  000001c: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:388: assert_invalid passed:
  error: type mismatch in f64x2.nearest, expected [v128] but got [i32]
  000001d: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:393: assert_invalid passed:
  error: type mismatch in f64x2.ceil, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:401: assert_invalid passed:
  error: type mismatch in f64x2.floor, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:409: assert_invalid passed:
  error: type mismatch in f64x2.trunc, expected [v128] but got []
  000001a: error: OnUnaryExpr callback failed
out/test/spec/simd/simd_f64x2_rounding.wast:417: assert_invalid passed:
  error: type mismatch in f64x2.nearest, expected [v128] but got []
  000001b: error: OnUnaryExpr callback failed
200/200 tests passed.
;;; STDOUT ;;)
